--- a/Backend/desenvolvimento/package.json
+++ b/Backend/desenvolvimento/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "srv": "node ./src/index.js",
-    "dev": "nodemon ./src/index"
+    "srv": "node src/index.js",
+    "dev": "nodemon src/index"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
-  },
-  "devDependencies": {
-    "nodeman": "^1.1.2"
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.2",
+    "path": "^0.12.7"
   }
 }
